# roost

./: .gitignore  README.md  README.rst  pyproject.toml
roost/: arrow_sink.py  arrow_utils.py  csv_sink.py  feather_sink.py  generate_packet.py  parquet_sink.py  proto_record_batch.py  storage.py  storage2.py
tests/: test_arrow_utils.py  test_roost.py  test_storage.py
