[tool.poetry]
name = "roost"
version = "0.1.0"
description = ""
authors = ["Andrew Horvath <claritymaker@pm.me>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.3.5"
pyarrow = "^6.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
