[tool.poetry]
name = "roost"
version = "0.1.0"
description = ""
authors = ["Andrew Horvath <claritymaker@pm.me>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.3.5"
pyarrow = "^8.0.0"
pytest = "^7.1.2"
polars = "^0.13.37"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
